--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 }
 
 iframe {
+  top: 0;
+  left: 0;
+  width: 80%;
   float: left; /* Float the iframe to the left */
   margin-right: 15px; /* Add some space between iframe and text */
 }
@@ -16,7 +19,7 @@ iframe {
 <body>
 
 <div class="iframe-container">
-  <iframe src="http://192.168.1.234:8889/cam" width="1200" height="900" title="Example Website"></iframe>
+  <iframe src="http://192.168.1.203:8889/cam" height="900" title="Example Website"></iframe>
   <p> <h3>Кількість супутників:</h3> 0</p>
   <p> <h3>Стан акумулятора:</h3> вольтаж: 0.009, струм: 17.21, рівень: 83</p>
   <p> <h3>Напрямок:</h3> 0</p>
