--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ iframe {
                 <div class="live-data">
                     <div><strong>Поточний час:</strong> <span id="currentTime">00:00:00</span></div>
                     <div><strong>Супутники:</strong> <span id="sats">0</span></div>
-                    <div><strong>Вольтаж:</strong> <span id="volts">V: 0, A: 0</span></div>
+                    <div><strong>Вольтаж:</strong> <span id="volts">V: 0</span></div>
                     <div><strong>Ампераж:</strong> <span id="amps">A: 0</span></div>
                     <div><strong>Напрямок:</strong> <span id="head">0</span></div>
                 </div>
