--- a/index.html
+++ b/index.html
@@ -26,15 +26,19 @@ iframe {
 <body>
 
 <div class="iframe-container">
-  <iframe src="http://192.168.10.1:8889/cam" height="900" title="Example Website"></iframe>
+  <iframe src="http://192.168.1.203:8889/cam" height="900" title="Example Website"></iframe>
 
             <div class="card">
                 <h2><i class="fas fa-bolt"></i>OSD</h2>
                 <div class="live-data">
                     <div><strong>Поточний час:</strong> <span id="currentTime">00:00:00</span></div>
-                    <div><strong>Супутники:</strong> <span id="sats">0</span></div>
+                    <div><strong>Запуск двигунів:</strong> <span id="arm">0</span></div>
+                    <div><strong>Швидкість:</strong> <span id="gspeed">0</span></div>
                     <div><strong>Напруга:</strong> <span id="volts">0</span></div>
                     <div><strong>Струм:</strong> <span id="amps">0</span></div>
+                    <div><strong>Супутники:</strong> <span id="sats">0</span></div>
+                    <div><strong>Широта:</strong> <span id="lat">0</span></div>
+                    <div><strong>Довгота:</strong> <span id="lon">0</span></div>
                     <div><strong>Напрямок:</strong> <span id="head">0</span></div>
                 </div>
                 </div>
