--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@ iframe {
         <span class="osd-title">ARMED:</span>
         <span class="osd-value" id="arm">0</span>
       </div>
+    <div class="osd-item">
+        <span class="osd-title">MODE:</span>
+        <span class="osd-value" id="mode">0</span>
+      </div>
+    <div class="osd-item">
+        <span class="osd-title">ALT:</span>
+        <span class="osd-value" id="alt">0</span>
+      </div>
       <div class="osd-item">
         <span class="osd-title">SPEED:</span>
         <span class="osd-value" id="gspeed">0</span>
